# cacs_fundeb_analysis

./: .gitignore  main.py  pyproject.toml
assets/templates/: Contabilidade_Orçamento.xlsx  Extratos_Consolidados.xlsx  Folha_Pagamento_Consolidada.xlsx  main.ipynb
data/interin/: extrato_conta_aplicação_bruto.xlsx  extrato_conta_corrente_bruto.xlsx
data/output/: extrato_bancário.xlsx
data/output/files/: extrato_bancário.xlsx
data/processed/: extrato_conta_aplicação_limpo.xlsx  extrato_conta_corrente_limpo.xlsx
data/raw/2025/: 2025_Demonstrativo_Execução_Financeira_Credor_por_mês_FUNDEB.xls
data/raw/2025/Bimestre_01/: Conciliação Bancária FUNDEB - 1º Bimestre 2025.xlsx  Demonstrativo da Execução Financeira por Credor -( FUNDEB ) 1B.xls  (+1 more)
docs/: TODO.md
notebooks/: 00_exploratory_data_analysis.ipynb
src/analysis/summary/: accounting.py  bank_statement.py  creditor_accounting.py  public_transfers.py  re.py
src/cacs_fundeb_analysis/elt/load/: re.py  (+3 more)
src/cacs_fundeb_analysis/utils/: api_utils.py  brownser.py  excel.py  file_paths.py
src/cacs_fundeb_analysis/viz/: financial_data_visualization.py
src/etl/extract/: accounting.py  application_account_statement.py  creditor_accounting.py  current_account_statement.py  monthly_accounting.py  public_transfers.py  re.py
src/etl/pipeline/: bank_statement.py
src/etl/transform/: accounting.py  application_account_statement.py  bank_statement.py  creditor_accounting.py  current_account_statement.py  monthly_accounting.py  public_transfers.py  re.py
src/utils/: config.py  date_utils.py  formatters.py  io.py
(+67 files in other folders)
